# qtmultiprocesssystem

./: .gitignore  .qmake.conf  CMakeLists.txt  LICENSE  README.md  qtmultiprocesssystem.pro  sync.profile
.github/workflows/: linux-5.15.2.yml  linux-5.yml  linux-6.4.0.yml  linux-6.yml  macos-5.yml  macos-6.yml  macox-5.15.2.yml  macox-5.yml  main.yml  windows-5.15.2.yml  windows-5.yml  windows-6.yml
config.tests/systemd_watchdog/: libsystemd-watchdog.cpp  systemd_watchdog.pro
examples/: CMakeLists.txt  examples.pro
examples/multiprocesssystem/: CMakeLists.txt  README.md  multiprocesssystem.pro
examples/multiprocesssystem/common/: AbstractMain.qml  Button.qml  common.qrc
examples/multiprocesssystem/footer/: CMakeLists.txt  footer.cpp  footer.json  footer.pro  footer.qml  footer.qrc  main.cpp  main.json
examples/multiprocesssystem/header/: CMakeLists.txt  header.cpp  header.json  header.pro  header.qml  header.qrc  main.json
examples/multiprocesssystem/menu/: CMakeLists.txt  main.json  menu.cpp  menu.json  menu.pro  menu.qml  menu.qrc
examples/multiprocesssystem/music/: CMakeLists.txt  main.cpp  music.cpp  music.json  music.pro  music.qml  music.qrc
examples/multiprocesssystem/navi/: CMakeLists.txt  MapImageItem.qml  navi.cpp  navi.json  navi.pro  navi.qml  navi.qrc
examples/multiprocesssystem/radio/: CMakeLists.txt  main.cpp  main.json  main.qrc  radio.cpp  radio.json  radio.pro  radio.qml  radio.qrc
examples/multiprocesssystem/settings/: CMakeLists.txt  main.cpp  settings.cpp  settings.json  settings.pro  settings.qml  settings.qrc
examples/multiprocesssystem/simple/: main.cpp  simple.pro  simple.qrc
examples/multiprocesssystem/system/: AbstractMain.qml  Button.qml  CMakeLists.txt  Skin.qml  main.qml  qtquickcontrols2.conf  system.cpp  system.json  system.pro  system.qml  system.qrc
examples/multiprocesssystem/taskmanager/: CMakeLists.txt  ProcessButton.qml  taskmanager.cpp  taskmanager.json  taskmanager.pro  taskmanager.qml  taskmanager.qrc
examples/multiprocesssystem/weather/: CMakeLists.txt  main.cpp  weather.cpp  weather.json  weather.pro  weather.qml  weather.qrc
src/: CMakeLists.txt  src.pro
src/imports/: CMakeLists.txt  imports.pro
src/imports/applicationmanager/: CMakeLists.txt  applicationmanager.pro  applicationmanager_plugin.cpp  applicationmanagermodel.cpp  applicationmanagermodel.h  qmldir
src/imports/urihandler/: CMakeLists.txt  qmldir  urihandler.pro  urihandler_plugin.cpp
src/imports/watchdog/: CMakeLists.txt  mainthreadwatchdog.cpp  mainthreadwatchdog.h  qmldir  renderthreadwatchdog.cpp  renderthreadwatchdog.h  systemdwatchdog.cpp  systemdwatchdog.h  watchdog.pro  watchdog_plugin.cpp  watchdog_plugin.h  xdgshellwatchdog.cpp  xdgshellwatchdog.h
src/imports/watchdog/xdgshell/: qmldir  xdgshell.pro  xdgshell_plugin.cpp  xdgshell_plugin.h  xdgshellwatchdog.h
src/multiprocesssystem/: CMakeLists.txt  multiprocesssystem.cpp  multiprocesssystem.h  multiprocesssystem.pro  multiprocesssystem_global.h  qmpsabstractdbusinterface.cpp  qmpsabstractdbusinterface.h  qmpsabstractipcinterface.cpp  qmpsabstractipcinterface.h  qmpsabstractmanagerfactory.h  qmpsapplication.cpp  qmpsapplication.h  qmpsapplicationfactory.cpp  qmpsapplicationfactory.h  qmpsapplicationmanager.cpp  qmpsapplicationmanager.h  qmpsapplicationmanagerfactory.cpp  qmpsapplicationmanagerfactory.h  qmpsapplicationmanagerplugin.cpp  qmpsapplicationmanagerplugin.h  qmpsapplicationplugin.cpp  qmpsapplicationplugin.h  qmpsinprocesswatchdogmanager.cpp  qmpsinprocesswatchdogmanager.h  qmpsipcinterface.h  qmpsurihandler.cpp  qmpsurihandler.h  qmpswatchdog.cpp  qmpswatchdog.h  qmpswatchdogmanager.cpp  qmpswatchdogmanager.h  qmpswatchdogmanagerfactory.cpp  qmpswatchdogmanagerfactory.h  qmpswatchdogmanagerplugin.cpp  qmpswatchdogmanagerplugin.h  qmpswindowmanager.cpp  qmpswindowmanager.h  qmpswindowmanagerfactory.cpp  qmpswindowmanagerfactory.h  qmpswindowmanagerplugin.cpp  (+1 more)
src/plugins/: CMakeLists.txt
src/plugins/multiprocesssystem/: CMakeLists.txt  multiprocesssystem.pro
src/plugins/multiprocesssystem/application/: application.pro
src/plugins/multiprocesssystem/application/footer/: footer.pro  main.qml
src/plugins/multiprocesssystem/application/header/: header.pro  header.qrc  main.cpp  main.qml
src/plugins/multiprocesssystem/application/menu/: main.cpp  main.qml  main.qrc  menu.pro
src/plugins/multiprocesssystem/application/music/: main.json  main.qml  main.qrc  music.pro
src/plugins/multiprocesssystem/application/navi/: main.cpp  main.json  main.qml  navi.pro
src/plugins/multiprocesssystem/application/radio/: main.qml  radio.pro
src/plugins/multiprocesssystem/application/settings/: main.json  main.qml  main.qrc  settings.pro
src/plugins/multiprocesssystem/application/weather/: main.qml  weather.pro  weather.qrc
src/plugins/multiprocesssystem/applicationmanager/: CMakeLists.txt  applicationmanager.pro
src/plugins/multiprocesssystem/applicationmanager/inprocess/: CMakeLists.txt  inprocess.pro  inprocessapplicationmanager.cpp  inprocessapplicationmanager.h  main.cpp
src/plugins/multiprocesssystem/applicationmanager/qprocess/: CMakeLists.txt  main.cpp  qprocess.json  qprocess.pro  qprocessapplicationmanager.cpp  qprocessapplicationmanager.h
src/plugins/multiprocesssystem/applicationmanager/remoteobjects/: applicationmanager.rep  main.cpp  remoteobjects.pro  remoteobjectsapplicationmanager.cpp  remoteobjectsapplicationmanager.h
src/plugins/multiprocesssystem/applicationmanager/systemd/: CMakeLists.txt  main.cpp  systemd.json  systemd.pro  systemdapplicationmanager.cpp  systemdapplicationmanager.h
src/plugins/multiprocesssystem/watchdogmanager/: CMakeLists.txt  watchdogmanager.pro
src/plugins/multiprocesssystem/watchdogmanager/inprocess/: CMakeLists.txt  inprocess.json  inprocess.pro  inprocesswatchdogmanager.cpp  main.cpp  (+1 more)
src/plugins/multiprocesssystem/windowmanager/: CMakeLists.txt  windowmanager.pro
tools/multiprocesssystem/: multiprocesssystem.pro
tools/multiprocesssystem/launcher/: CMakeLists.txt  launcher.cpp  launcher.pro
(+18 files in other folders)
